// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app renders admin page 1`] = `
Array [
  <header
    className="MuiPaper-root-141 MuiPaper-elevation4-147 MuiAppBar-root-132 MuiAppBar-positionStatic-136 MuiAppBar-colorPrimary-139"
  >
    <div
      className="MuiToolbar-root-168 MuiToolbar-regular-170 MuiToolbar-gutters-169"
    >
      <a
        className="MuiButtonBase-root-178 MuiIconButton-root-172 MuiIconButton-colorInherit-173"
        href="#"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-177"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-181"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-226"
        />
      </a>
      <h6
        className="MuiTypography-root-190 MuiTypography-h6-207 MuiTypography-colorInherit-219"
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        Heroes
      </h6>
      <a
        className="MuiButtonBase-root-178 MuiIconButton-root-172 MuiIconButton-colorInherit-173"
        href="#profile"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-177"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-181"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-226"
        />
      </a>
    </div>
  </header>,
  <div
    className="MuiPaper-root-141 MuiPaper-elevation2-145 MuiPaper-rounded-142 class_1-paper-234"
  >
    <h4
      className="MuiTypography-root-190 MuiTypography-h4-205"
    >
      Heroes
    </h4>
    <ul
      className="MuiList-root-235 MuiList-padding-236"
    >
      <div
        className="MuiButtonBase-root-178 MuiListItem-root-239 MuiListItem-default-242 MuiListItem-gutters-247 MuiListItem-button-248"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <div
          className="MuiListItemIcon-root-251"
        >
          <div
            className="MuiAvatar-root-252 MuiAvatar-colorDefault-253"
          />
        </div>
        <div
          className="MuiListItemText-root-255"
        >
          <span
            className="MuiTypography-root-190 MuiTypography-body1-199 MuiListItemText-primary-258"
          >
            Johannes
          </span>
          <p
            className="MuiTypography-root-190 MuiTypography-body2-198 MuiTypography-colorTextSecondary-223 MuiListItemText-secondary-259"
          >
            johannes@brodwall.com
          </p>
        </div>
        <span
          className="MuiTouchRipple-root-226"
        />
      </div>
    </ul>
    <a
      className="MuiButtonBase-root-178 MuiButton-root-261 MuiButton-contained-272 MuiButton-containedPrimary-273 MuiButton-raised-275 MuiButton-raisedPrimary-276"
      href="#admin/heroes/add"
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex="0"
    >
      <span
        className="MuiButton-label-262"
      >
        Add hero
      </span>
      <span
        className="MuiTouchRipple-root-226"
      />
    </a>
  </div>,
]
`;

exports[`app renders hero list 1`] = `
Array [
  <header
    className="MuiPaper-root-10 MuiPaper-elevation4-16 MuiAppBar-root-1 MuiAppBar-positionStatic-5 MuiAppBar-colorPrimary-8"
  >
    <div
      className="MuiToolbar-root-37 MuiToolbar-regular-39 MuiToolbar-gutters-38"
    >
      <a
        className="MuiButtonBase-root-47 MuiIconButton-root-41 MuiIconButton-colorInherit-42"
        href="#"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-46"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-50"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-97"
        />
      </a>
      <h6
        className="MuiTypography-root-59 MuiTypography-h6-76 MuiTypography-colorInherit-88"
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        Heroes
      </h6>
      <a
        className="MuiButtonBase-root-47 MuiIconButton-root-41 MuiIconButton-colorInherit-42"
        href="#profile"
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="0"
      >
        <span
          className="MuiIconButton-label-46"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-50"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-97"
        />
      </a>
    </div>
  </header>,
  <div>
    <div
      className="MuiPaper-root-10 MuiPaper-elevation2-14 MuiPaper-rounded-11 class_1-paper-96"
    >
      <h4
        className="MuiTypography-root-59 MuiTypography-h4-74"
      >
        Heroes
      </h4>
      <div
        className="heroes-list"
      >
        <ul
          className="MuiList-root-104 MuiList-padding-105"
        >
          <li
            className="MuiListItem-root-108 MuiListItem-default-111 MuiListItem-dense-112 MuiListItem-gutters-116"
            disabled={false}
          >
            <div
              className="MuiAvatar-root-123 MuiAvatar-colorDefault-124"
            />
            <div
              className="MuiListItemText-root-126"
            >
              <span
                className="MuiTypography-root-59 MuiTypography-body1-68 MuiListItemText-primary-129"
              >
                Alice
              </span>
              <p
                className="MuiTypography-root-59 MuiTypography-body2-67 MuiTypography-colorTextSecondary-92 MuiListItemText-secondary-130"
              >
                
              </p>
            </div>
          </li>
          <li
            className="MuiListItem-root-108 MuiListItem-default-111 MuiListItem-dense-112 MuiListItem-gutters-116"
            disabled={false}
          >
            <div
              className="MuiAvatar-root-123 MuiAvatar-colorDefault-124"
            />
            <div
              className="MuiListItemText-root-126"
            >
              <span
                className="MuiTypography-root-59 MuiTypography-body1-68 MuiListItemText-primary-129"
              >
                Bob
              </span>
              <p
                className="MuiTypography-root-59 MuiTypography-body2-67 MuiTypography-colorTextSecondary-92 MuiListItemText-secondary-130"
              >
                
              </p>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;
